--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.5.0",
-    "next": "13.5.6",
+    "firebase": "^10.5.2",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "vercel": "^32.5.0"
